--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@ __pycache__/
 cp.ckpt
 tweets.txt
 tokenizer.*
+.DS_Store
+.vscode/settings.json
+data/.cp.ckpt.icloud
+data/.DS_Store
+data/.tweets 2.wv.icloud
+data/.tweets.wv 2.model.icloud
+data/.tweets.wv.icloud
+data/.tweets.wv.model.icloud
